adjust view to append img instead of replace, update css, remove backup view

--- a/web/css/odontogram.css
+++ b/web/css/odontogram.css
@@ -2,7 +2,16 @@
     text-align: center;
     margin-bottom: 5px;
 }
-.clickable-tooth {
+.svg-container {
+    position: relative;
+    width: 50px;
+}
+
+.clickable-tooth,
+.clickable-tooth-overlay {
+    position: absolute;
+    top: 25px;
+    left: 0;
     width: 50px;
     height: auto;
 }
