--- a/web/css/odontogram.css
+++ b/web/css/odontogram.css
@@ -15,3 +15,12 @@
     width: 50px;
     height: auto;
 }
+
+.hoverable-row {
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.hoverable-row:hover {
+    background-color: #f5f5f5; /* Adjust the background color as needed */
+}
